--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <h1>Siflex Mobile</h1>
     <p>지금 바로 최신 버전을 다운로드하세요!</p>
-    <img src="https://siflexmis.github.io/Resources/Images/iosArtwork.png" alt="ios"> <br>   
+    <img src="https://siflexmis.github.io/Resources/Images/appicon76x76@2x.png" alt="ios"> <br>   
     <button onclick="location.href='itms-services://?action=download-manifest&url=https://siflexmis.github.io/ios/silfex.plist'">Download</button>
     <p>주의사항:</p>
     <ul>
