--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <h1>Siflex Mobile</h1>
     <p>지금 바로 최신 버전을 다운로드하세요!</p>
     <img src="https://siflexmis.github.io/Resources/Images/appicon76x76@2x.png" alt="ios"> <br>   
-    <button onclick="location.href='itms-services://?action=download-manifest&url=https://siflexmis.github.io/ios/silfex.plist'">Download</button>
+   
+    <a href="itms-services://?action=download-manifest&url=https://siflexmis.github.io/ios/silfex.plist">
+    <button >Download</button>
+    </a>
+    
     <p>주의사항:</p>
     <ul>
       <li>본 앱은 테스트 목적으로 배포됩니다.</li>
