--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>지금 바로 최신 버전을 다운로드하세요!</p>
     <img src="https://siflexmis.github.io/Resources/Images/appicon76x76@2x.png" alt="ios"> <br>   
    
-    <a href="itms-services://?action=download-manifest&url=https://siflexmis.github.io/ios/silfex.plist">
+    <a href="itms-services://?action=download-manifest&url=https://siflexmis.github.io/ios/siflex.plist">
     <button >Download</button>
     </a>
     
