--- a/index.html
+++ b/index.html
@@ -10,20 +10,16 @@
     .container { padding: 20px; }
     h1 { color: #007bff; } /* 메인 색상 */
     button { background-color: #007bff; color: white; padding: 10px 20px; border: none; cursor: pointer; }
-    /* 반응형 스타일 */
-    @media (max-width: 768px) { 
-      .container { padding: 10px; } 
-    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Siflex Mobile</h1>
     <p>지금 바로 최신 버전을 다운로드하세요!</p>
-    <img src="https://siflexmis.github.io/Resources/Images/appicon76x76@2x.png" alt="ios"> <br>   
-   
+    <img src="https://siflexmis.github.io/Resources/Images/appicon76x76@2x.png" alt="ios"> 
+    <br>
     <a href="itms-services://?action=download-manifest&url=https://siflexmis.github.io/ios/siflex.plist">
-    <button >Download</button>
+    <button>Download</button>
     </a>
     
     <p>주의사항:</p>
